fixed aligning of inputs

--- a/calpool-fe/src/components/TextInput/TextInput.css
+++ b/calpool-fe/src/components/TextInput/TextInput.css
@@ -9,6 +9,7 @@
     outline: none;
     border: none;
     font-size: 1.1rem;
+    margin-left: 0px;
   }
   
   .error {
